v.0.6.0
- added option to bypass dialog asking if you want to launch the streaming service

v.0.5.1
- settings fixes for better backwards compatibility
- changed IP entry in settings to string to allow for domain name
- added settings option to enable SSL (HA only)
- Harmony Hub option now shows list of activites from which to pick

v.0.5.0
- added option to use Home Assistant script to launch external app

v.0.4.3
- fix for crash if using Harmony Hub Control with an activity

v.0.4.2
- fix for logging issue with Python3

v.0.4.1
- fix for "no next item in playlist" error

v.0.4.0
- added ability to open external apps using Harmony Hub
- fix for looping dialog box if called from home window

v.0.2.1
- version bump for resubmission to repo-plugins

v.0.2.0
- changes in logging to accomodate new logging requirements for Kodi 19
- re-organized code so it can be submitted to the Kodi repo

v.0.1.0
- Python 2/3 compatibility

v.0.0.2
- updated readme and icon

v.0.0.1
- initial release