@@ -1,5 +1,6 @@
 v.0.6.0
 - added option to bypass dialog asking if you want to launch the streaming service
+- if using HA control and an AppleTV, can pass video URL to launch episode/movie directly
 
 v.0.5.1
 - settings fixes for better backwards compatibility
